--- a/index.html
+++ b/index.html
@@ -137,5 +137,5 @@
             </ul>
         </div>
     </div>
-</body>
+<script type="text/javascript" src="./bundle.js"></script></body>
 </html>
