--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,22 +5,25 @@
     <title>Validation schema to DtoIn generator</title>
 </head>
 <body class="bg-light">
-    <div class="alert alert-info rounded-0">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    This project is still in <strong>Alpha</strong>. Use it only on your <strong>own risk</strong>!
+    <div class="alert alert-info rounded-0 px-0">
+        <div class="container-fluid">
+            <div class="row align-items-baseline">
+                <div class="col-12 col-md">
+                    This project is still in <strong>Alpha</strong>. Use it only on your <strong>own risk</strong>! (Always check your usage according to <a href="https://docs.plus4u.net/uaf/uuapp/uuappserver/book/page?code=validation_00">specification</a>)
                 </div>
-                <div class="col-auto">
-                    version 0.0.3-alpha
+                <div class="col-auto text-center text-md-right mt-2 mt-md-0">
+                    version 0.0.4-alpha
+                </div>
+                <div class="col-auto text-right mt-2 mt-md-0 pl-0">
+                    <a href="https://github.com/JJetmar/validation-schema-to-dtoin-issues/issues" class="btn btn-sm btn-dark">Report bug</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container mt-5 mb-3">
+    <div class="container mt-4 mb-3">
         <div class="row mb-4">
             <div class="col">
-                <h1 class="text-lg-center">Validation schema to DtoIn generator</h1>
+                <h1 class="text-center">Validation schema to DtoIn&nbsp;generator</h1>
             </div>
         </div>
         <div class="row">
@@ -42,9 +45,9 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="position-sticky" style="top: 16px">
-                    <h2 class="text-lg-right mb-lg-3">Validation Schema:</h2>
+                    <h2 class="mb-lg-3">Validation Schema:</h2>
                     <div class="form-group">
-                        <textarea id="input" class="form-control h-auto text-monospace" rows="15">const jokeDtoInType = shape({
+                        <textarea id="input" class="form-control h-auto text-monospace" style="max-height: calc(100vh - 10rem); overflow: auto" rows="15">const jokeDtoInType = shape({
   id: mongoId(),
   joke: string(20,50),
   author: oneOf(["Karel", "Pepa", "Ivan"]),
@@ -60,11 +63,11 @@
                         </div>
                     <div class="alert alert-danger d-none" id="error"></div>
                     <div class="alert alert-success d-none" id="valid">
-                        Validation schema <strong>is valid</strong>.
+                        Validation schema <strong>seems to be valid</strong>.
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 mt-3 mt-md-0">
                 <div class="position-sticky" style="top: 16px">
                     <h2 class="mb-lg-3">Generated DtoIn:</h2>
                     <div class="form-group">
@@ -82,9 +85,9 @@
             </div>
         </div>
     </div>
-    <div class="container mb-5">
+    <div class="container-fluid mb-4">
         <div class="alert alert-warning" role="alert">
-            <h4 class="alert-heading">Know issues!</h4>
+            <h4 class="alert-heading">Known issues <small>(also see already <a href="https://github.com/JJetmar/validation-schema-to-dtoin-issues/issues">reported issues</a>)</small></h4>
             <p><strong>Everything is generated like it has isRequired() (for now).</strong></p>
             <p><strong>These things are not implemented yet:</strong></p>
             <div class="card-columns">
@@ -108,8 +111,6 @@
                     <li>uu5String(n)</li>
                     <li>uu5Json()</li>
                     <li>uu5Json(n)</li>
-                    <li>hexa32Code()</li>
-                    <li>hexa64Code()</li>
                     <li>binary()</li>
                     <li>isRequired(["key0", key1", ...])</li>
                     <li>stringSetOf(["value0", ... ])</li>
@@ -119,27 +120,38 @@
 
             <hr/>
 
+        </div>
+        <div class="alert alert-info" role="alert">
+
             <h4 class="alert-heading">Changelog</h4>
-            <p><strong>0.0.3-alpha (2020-07-14)</strong></p>
-            <ul>
-                <li>Fixed empty always empty string if no parameters set.</li>
-                <li>Added possibility to detect null type.</li>
-                <li>Larger input for Validation schema and generated DtoIn.</li>
-            </ul>
-            <p><strong>0.0.2-alpha (2019-01-19)</strong></p>
-            <ul>
-                <li>Added dynamic url for sharing validation schemas with your friends!</li>
-                <li>Better validation of validation schemas based on method signatures and parameter types.</li>
-                <li>Fixed bug with same min and max length for strings.</li>
-                <li>Remembering last used validation schema.</li>
-                <li>Support for more validation types.</li>
-                <!--<li>Integration with.</li>-->
-            </ul>
-            <p><strong>0.0.1-alpha (2018-10-21)</strong></p>
-            <ul>
-                <li>Generates dtoIn based on validation schema.</li>
-                <li>First release.</li>
-            </ul>
+                <p><strong>0.0.4-alpha (2020-07-14)</strong></p>
+                <ul>
+                    <li>Fixed few usability and design issues.</li>
+                    <li>Added support for hexa32Code and hexa64Code.</li>
+                    <li>Changed validation of float type according to specification.</li>
+                    <li>Fixed few typos.</li>
+                    <li>Added validation for unwanted assigning validation types with possible suggestions to fix.</li>
+                </ul>
+                <p><strong>0.0.3-alpha (2020-07-14)</strong></p>
+                <ul>
+                    <li>Fixed empty strings that were generated when no parameters was set.</li>
+                    <li>Added possibility to detect null type.</li>
+                    <li>Larger input for Validation schema and generated DtoIn.</li>
+                </ul>
+                <p><strong>0.0.2-alpha (2019-01-19)</strong></p>
+                <ul>
+                    <li>Added dynamic url for sharing validation schemas with your friends!</li>
+                    <li>Better validation of validation schemas based on method signatures and parameter types.</li>
+                    <li>Fixed bug with same min and max length for strings.</li>
+                    <li>Remembering last used validation schema.</li>
+                    <li>Support for more validation types.</li>
+                </ul>
+                <p><strong>0.0.1-alpha (2018-10-21)</strong></p>
+                <ul>
+                    <li>Generates dtoIn based on validation schema.</li>
+                    <li>First release.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
