hotfix index bundle

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -154,5 +154,6 @@
             </div>
         </div>
     </div>
+    <script src="bundle.js" type="text/javascript" async defer></script>
 </body>
 </html>
