more reasonably validation strictness.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,7 +15,7 @@
                     version 0.0.4-alpha
                 </div>
                 <div class="col-auto text-right mt-2 mt-md-0 pl-0">
-                    <a href="https://github.com/JJetmar/validation-schema-to-dtoin-issues/issues" class="btn btn-sm btn-dark">Report bug</a>
+                    <a href="https://github.com/JJetmar/validation-schema-to-dtoin-issues/issues" class="btn btn-sm btn-dark">Report bug / Request feature</a>
                 </div>
             </div>
         </div>
