--- a/src/public/index.html
+++ b/src/public/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <div class="container-fluid mb-4">
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-warning pb-4" role="alert">
             <h4 class="alert-heading">Known issues <small>(also see already <a href="https://github.com/JJetmar/validation-schema-to-dtoin-issues/issues">reported issues</a>)</small></h4>
             <p><strong>Everything is generated like it has isRequired() (for now).</strong></p>
             <p><strong>These things are not implemented yet:</strong></p>
@@ -117,9 +117,6 @@
                     <li>stringSetOf(["value0", ... ], delimiter)</li>
                 </ul>
             </div>
-
-            <hr/>
-
         </div>
         <div class="alert alert-info" role="alert">
 
